Version 2.2 (Work in Progress)

* Switch build system from Autotools to Meson
* Upgrade from GTK+ 2 to 3

Version 2.1

* Switches from Glade to GtkBuilder
* Might compile under Windows
* New test: LCD Alignment
* Import translations from Debian

Version 2.0

* Major overhaul. Now uses GTK+ 2.x and libglade
* I18N - Please translate! (Has some issues with international characaters,
  should be solved in the next version)
* More flexible colour selection, now pops up a colour picker for colours.
* Make it easier to write new tests.

Version 1.0

* This is a new program, so first news is this very existence :-)
